# jpeg_decoder

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  MANIFEST.in  README.md  decoder.i  jpeg_coder_decoder  makefile  setup.py
docs/: Doxyfile  conf.py
docs/sphinx/: conf.py  index.rst
include/: JPEGDecoder.hpp  JPEGException.hpp  JPEGHuffmanDecoder.hpp  JPEGParser.hpp  JPEGType.hpp  JPEGUtility.hpp  JPEGUtils.hpp
python_scripts/: create_matrix.py  dataset_testing.py  deserialize.1.2.py  deserialize.py  python_time_testing.py  read_data.py  test_python.py
src/: JPEGDecoder.cpp  JPEGDecoder_python.cpp  JPEGHuffmanDecoder.cpp  JPEGHuffmanDecoder_python.cpp  JPEGParser.cpp  JPEGParser_python.cpp  JPEGUtility.cpp  JPEGUtility_python.cpp  JPEGUtils.cpp  JPEGUtils_python.cpp  main.cpp  main_python.cpp  main_time.cpp
test/: CMakeLists.txt  test_JPEGDecoderBaseline.cpp  test_JPEGDecoderUtility.cpp  test_JPEGHuffman.cpp  test_JPEGParsing.cpp  test_JPEGUtility.cpp
